--- a/templates/rss.hbs
+++ b/templates/rss.hbs
@@ -1,4 +1,4 @@
-export const rssTemplate = `<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <rss version="2.0">
     <channel>
         <title>{{appTitle}}</title>
@@ -30,4 +30,3 @@ export const rssTemplate = `<?xml version="1.0" encoding="UTF-8" ?>
         {{/each}}
     </channel>
 </rss>
-`;
