Dev 777 bounties discovery page (#804)
* DEV-976 fix bounty roadmap (#779)

* DEV-976 fix bounty roadmap

* DEV-976 fix network params

* Dev 1152 review pull requests using web app (#780)

* updating route from developers to bounties

* fixes

* adding viewer perm and branch protection rules

* fix

* fix

* disable merge btn if pr need approval

* fix eslint warnings

* adding approve btn on item row

* set bot as admin

* adding translation

* only show btn when pull request

* fix

* removing unused

* Dev 1210 re authorize GitHub connection (#782)

* changing to 5 minutes to test

* changing to 2 minutes

* verifying and showing modal

* adding translations

* centering btn

* 30 days again

* Dev 1185 fix update network tokens (#778)

* DEV-1185 fix update network tokens

* DEV-1185 add getnetworktokens endpoint

* DEV-1185 fix network tokens select

* DEV-1185 fix type

* DEV-1185 remove debugger

* DEV-1185 remove unused func

* fix (#781)

* Dev 1211 implement primer css markdown into the preview stage of bounty creation and bounty page (#784)

* testing primer

* test

* adding preview

Co-authored-by: clarkjoao <46800211+clarkjoao@users.noreply.github.com>

* fix (#787)

* fix (#786)

Co-authored-by: Marcus Vinícius <marcusvinici25@gmail.com>

* adding target _blank (#788)

Co-authored-by: Marcus Vinícius <marcusvinici25@gmail.com>

* DEV-1216 move close network btn to governance tab (#789)

* DEV-1135 add spinner when connect gh (#792)

* DEV-1212 fix deep copy settings (#791)

* DEV-1212 fix deep copy settings

* DEV-1212 remove duplicate comment

* Dev 1218 percentage needed for dispute changes but no save button appears (#793)

* creating warning github component

* adding translations

* adding warningGithub component to my-network page

* Dev 1184 custom networks visual bugs (#795)

* adjusting height Logo

* removing settings because not workin

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -470,7 +470,7 @@ li {
   border-radius: math.div($m, 2);
   transition: 0.8 ease-in-out;
   margin-bottom: $m;
-
+  max-height: 193px;
   &:last-child {
     margin-bottom: 0;
   }
@@ -580,6 +580,17 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   .button-max {
     cursor: pointer;
   }
+}
+
+.issue-body {
+  max-width: 260px;
+}
+
+.network-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 155px
 }
 
 .status {
