--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1777,4 +1777,7 @@ input[type="color"] {
 
 .select-network-dropdown {
   width: 134px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 500px;
 }
