--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,6 +23,8 @@
 @import "components/profile-menu";
 @import "components/mini-tabs";
 
+@import "components/swagger-ui";
+
 @function toRGB($color) {
   @return "" + red($color) + ", " + green($color) + ", " + blue($color);
 }
