--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1758,7 +1758,7 @@ input[type="color"] {
 }
 
 .select-network-dropdown {
-  width: 140px;
+  max-width: 168px;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 500px;
