adjusting issue-progress-vertical style

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -858,7 +858,8 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 }
 
 .issue-progress-vertical {
-  height: 2px;
+  margin-left: 10px;
+  height: 4px;
 }
 
 .material-icons {
