adding gray-800 to variables

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,6 +19,7 @@ $gray-100: #E3E3E8;
 $gray-300: #ABACBA;
 $gray-500: #73758C;
 $gray-700: #454654;
+$gray-800: #2E2F38;
 $gray-850: #23232A;
 $gray-900: #17171C;
 $gray-950: #0C0C0E;
