set max height and add scroll

--- a/styles/filter-box.scss
+++ b/styles/filter-box.scss
@@ -12,6 +12,8 @@
 
     .filter-content {
       height: calc(100% - 30px);
+      max-height: 300px;
+      overflow-y: auto;
       &.filter-search {
         height: calc(100% - 76px);
       }
