--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -86,6 +86,10 @@ li {
   margin-top: 20px !important;
 }
 
+.mgt-3 {
+  margin-top: 3px !important;
+}
+
 .mgb-20 {
   margin-bottom: 50px !important;
 }
@@ -1773,4 +1777,8 @@ input[type="color"] {
 
 .btn-outline-purple {
   border-color: var(--bs-purple);
+}
+
+.kyc-modal-body{
+  min-height: 630px !important;
 }
