--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -18,6 +18,7 @@ $gray: #c4c7d3;
 $gray-100: #E3E3E8;
 $gray-150: #D5D6DC;
 $gray-300: #ABACBA;
+$gray-400: #8F91A3;
 $gray-500: #73758C;
 $gray-700: #454654;
 $gray-850: #23232A;
@@ -84,6 +85,7 @@ $more-bg: (
   "gray-100": $gray-100,
   "gray-150": $gray-150,
   "gray-300": $gray-300,
+  "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
   "gray-850": $gray-850,
@@ -105,6 +107,7 @@ $more-colors: (
   "gray-100": $gray-100,
   "gray-150": $gray-150,
   "gray-300": $gray-300,
+  "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
   "gray-850": $gray-850,
