rebase with dev (#930)
* Bepro 1451 dont remove network id from attributes when get search networks (#894)

* removing id to exclude attributes - search network

* removing id to exclude attributes - active netwoks

* removing id in exclude

* Hotfix 10032023 (#913)

* fix reading of undefined

* Bepro 1370 fix UI bounty hall logos main nav logo and bounty hero states (#896)

* adding styles and logic bg

* adding color to bountyTags

* adjusting BountyTags component

* update Bagde logic

* adding opacity logic and refactoring style

* adding opacity param to hero

* adjusting space

* adding import

* adding color to hero

* adding ? to colors primary

* adjusting if association network

* DEV-982 Know Your Client (#860)

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 add kyc session model

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 remove tier settings

* DEV-982 create helper find user by session

* DEV-982 isolate helper query

* DEV-982 add isKyc to bounties

* DEV-982 change isKyc to tierList

* DEV-982 add tierList to settings

* DEV-982 validate tier per bounty

* DEV-982 refresh step btn

* DEV-982 restore loading state

* DEV-982 changes request

* DEV-982 fix validate tiers

* DEV-982 fix check isKyc

* DEV-982 restore package-lock

* DEV-982 refresh token

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 change isKyc to tierList

* DEV-982 changes request

* DEV-982 fix conflicts

* DEV-982 fix conflicts

* DEV-982 remove debugger

* DEV-982 restore package-json

* DEV-982 restore check

* DEV-982 fix loading modal

* DEV-982 fix size modal

* doctors hands: Account for matching accounts before verifying a user

* linted

* clean dupes from rebase

* fix loggers

* make it so page.action on bounty redirects to profil

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -86,6 +86,10 @@ li {
   margin-top: 20px !important;
 }
 
+.mgt-3 {
+  margin-top: 3px !important;
+}
+
 .mgb-20 {
   margin-bottom: 50px !important;
 }
@@ -1779,4 +1783,8 @@ input[type="color"] {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 500px;
+}
+
+.kyc-modal-body{
+  min-height: 630px !important;
 }
