--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -21,6 +21,7 @@ $gray-300: #ABACBA;
 $gray-400: #8F91A3;
 $gray-500: #73758C;
 $gray-700: #454654;
+$gray-800: #2E2F38;
 $gray-850: #23232A;
 $gray-900: #17171C;
 $gray-950: #0B0C0E;
@@ -88,6 +89,7 @@ $more-bg: (
   "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
+  "gray-800": $gray-800,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
@@ -110,6 +112,7 @@ $more-colors: (
   "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
+  "gray-800": $gray-800,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
