--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -53,7 +53,7 @@
   --bs-secondary:#{$secondary};
   --bs-secondary-rgb:#{toRGB($secondary)};
   --bs-body-bg:#{$gray-950};
-  --bs-body-bg-rgb:#{toRGB($bg)};
+  --bs-body-bg-rgb:#{toRGB($gray-950)};
   --bs-dark:#{$gray-950};
   --bs-dark-rgb:#{toRGB($gray-950)};
 }
@@ -267,20 +267,7 @@ li {
   }
 }
 
-.form-control {
-  min-width: 100px;
-  border-color: transparent;
-  color: transparentize($white, 0.4);
-  &,
-  &:focus {
-    box-shadow: none;
-    background-color: $bg;
-  }
-  &:focus {
-    border-color: var(--bs-primary);
-    color: $white;
-  }
-}
+
 
 // familys
 .family-Regular {
@@ -545,14 +532,25 @@ li {
 label {
   color: var(--bs-gray);
 }
+
 .form-control {
-  background-color: $black;
-  border: 1px solid $black;
-  color: var(--bs-gray);
+  min-width: 100px;
+
+  background-color: $gray-900;
+  border: 1px solid $gray-800;
+  color: $gray-700;
+
   &:disabled,
   &[readonly] {
-    background-color: $black;
+    background-color: $gray-900;
     opacity: 0.4;
+  }
+
+  &:focus {
+    box-shadow: none;
+    background-color: $gray-900;
+    border-color: var(--bs-primary);
+    color: $white;
   }
 }
 
@@ -568,21 +566,49 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 }
 
 .input-group {
+  padding-left: 0;
+  padding-right: 0;
+
+  border: 1px solid $gray-800;
+
+  &,
+  > input {
+    border-radius: math.div($m, 4);
+  }
+
+  > input:not(:only-child) {
+    border-right: none !important;
+  }
+
+  &:focus-within {
+    .input-group-text {
+      border-left: none !important;
+      background-color: $bg;
+
+      &:not(.border) {
+        border: 1px solid var(--bs-primary);
+        border-left: none;
+      }
+    }
+  }
+
   .input-group-text {
-    background-color: $black;
-    border: 1px solid $black;
-    color: var(--bs-gray);
+    background-color: $gray-900;
+    border: 1px solid $gray-800;
+    color: $gray-700;
 
     &.group-disabled {
       opacity: 0.4;
       border: 1px solid rgba($black, 0.4);
     }
   }
+
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
+
   .button-max {
     cursor: pointer;
   }
@@ -1274,15 +1300,11 @@ textarea.form-control {
   }
 
   .input-group {
-    border: 2px solid transparent;
+    border: 1px solid $gray-800;
     
     .input-group-text {
-      border-top-left-radius: math.div($m, 2);
-      border-bottom-left-radius: math.div($m, 2);
-    }
-
-    &:hover {
-      border: 2px solid $light-gray;
+      border-top-left-radius: math.div($m, 4);
+      border-bottom-left-radius: math.div($m, 4);
     }
 
     &:focus-within {
@@ -1290,7 +1312,6 @@ textarea.form-control {
 
       .input-group-text {
         border: 0 !important;
-        background-color: $black;
       }
     }
 
@@ -1299,13 +1320,12 @@ textarea.form-control {
 
       &:focus {
         border: 0;
-        background-color: $black;
       }
     }
 
     button {
-      background-color: $black;
-      border-top-right-radius: math.div($m, 2);
+      background-color: $gray-900;
+      border-top-right-radius: math.div($m, 4);
       border-bottom-right-radius: math.div($m, 2);
 
       svg {
@@ -1316,7 +1336,7 @@ textarea.form-control {
   }
 
   button {
-    border: 2px solid transparent;
+    border: 1px solid transparent;
 
     &:hover {
       border-color: $light-gray;
@@ -1504,31 +1524,7 @@ input[type="color"] {
   }
 }
 
-.input-group {
-  padding-left: 0;
-  padding-right: 0;
 
-  &,
-  > input {
-    border-radius: math.div($m, 2);
-  }
-
-  > input:not(:only-child) {
-    border-right: none !important;
-  }
-
-  &:focus-within {
-    .input-group-text {
-      border-left: none !important;
-      background-color: $bg;
-
-      &:not(.border) {
-        border: 1px solid var(--bs-primary);
-        border-left: none;
-      }
-    }
-  }
-}
 
 .amount-input {
   .input-group {
