adding class max-width none

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1892,6 +1892,10 @@ input[type="color"] {
   font-weight: 500px;
 }
 
+.w-max-none {
+  max-width: none !important;
+}
+
 .kyc-modal-body{
   min-height: 630px !important;
 }
