--- a/styles/components/identicon.scss
+++ b/styles/components/identicon.scss
@@ -6,12 +6,18 @@
 
     border: 3px solid var(--bs-primary);
 
+    &.xsm {
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+    }
+
     &.sm {
       border-radius: 50%;
-      width: 32;
-      height: 32;
+      width: 32px;
+      height: 32px;
     }
-    
+
     &.md {
       border-radius: 50%;
       width: 40px;
