--- a/styles/components/network-logo.scss
+++ b/styles/components/network-logo.scss
@@ -1,4 +1,11 @@
 .network-logo {
-  width: 48px;
-  height: 48px;
+  &-md{
+    width: 32px;
+    height: 32px;
+  }
+
+  &-lg{
+    width: 48px;
+    height: 48px;
+  }
 }
