--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -743,6 +743,10 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   font-weight: normal !important;
 }
 
+.font-weight-500 {
+  font-weight: 500 !important;
+}
+
 .font-weight-medium {
   font-weight: 500 !important;
 }
