Bepro 1499 support multi network on my bounties and multi network design (#926)
* introducing new profile structure and profile router

* handling profile page redirect

* fix validation

* renaming dynamic because of conflicts with usePage hook

* using creator address and introducing variant

* review change

* adding list issues variant

* updating styles

* more work

* more style

* removing old pages and resolvind conflicts

* fixes

* adjust styles

* multi chain and network done, missing design

* fix styles

* fix

* import existing code

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -18,8 +18,10 @@ $gray: #c4c7d3;
 $gray-100: #E3E3E8;
 $gray-150: #D5D6DC;
 $gray-300: #ABACBA;
+$gray-400: #8F91A3;
 $gray-500: #73758C;
 $gray-700: #454654;
+$gray-800: #2E2F38;
 $gray-850: #23232A;
 $gray-900: #17171C;
 $gray-950: #0B0C0E;
@@ -84,8 +86,10 @@ $more-bg: (
   "gray-100": $gray-100,
   "gray-150": $gray-150,
   "gray-300": $gray-300,
+  "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
+  "gray-800": $gray-800,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
@@ -105,8 +109,10 @@ $more-colors: (
   "gray-100": $gray-100,
   "gray-150": $gray-150,
   "gray-300": $gray-300,
+  "gray-400": $gray-400,
   "gray-500": $gray-500,
   "gray-700": $gray-700,
+  "gray-800": $gray-800,
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
