--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -709,6 +709,12 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
     background-color: $gray-900;
     color: $gray-300;
   }
+  &:disabled {
+    border-radius: 4px;
+    border-color: $gray-700;
+    background-color: $gray-900;
+    color: $gray-300;
+  }
   &:focus {
     border-radius: 4px;
     border-color: $gray-700;
