--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -220,7 +220,7 @@ li {
       color: transparentize($white, 0.4);
     }
     &__menu {
-      // min-width: 210px;
+      min-width: fit-content;
       border-radius: 4px;
       border: 1px solid $gray-800;
       background-color: $gray-900;
@@ -696,7 +696,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 
 .bounty-button {
   border-radius: 4px;
-  
+
 }
 
 .bounty-outline-button {
