fix break select token dropdown

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -226,7 +226,7 @@ li {
       background-color: $gray-900;
       z-index: 4;
       padding: 6px;
-
+      margin-bottom: 70px;
       &-list {
         padding-top: 0;
         padding-bottom: 0;
