Bepro 1498 redesign payments page multi network only (#934)
* Bepro 1370 fix UI bounty hall logos main nav logo and bounty hero states (#896)

* adding styles and logic bg

* adding color to bountyTags

* adjusting BountyTags component

* update Bagde logic

* adding opacity logic and refactoring style

* adding opacity param to hero

* adjusting space

* adding import

* adding color to hero

* adding ? to colors primary

* adjusting if association network

* DEV-982 Know Your Client (#860)

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 add kyc session model

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 remove tier settings

* DEV-982 create helper find user by session

* DEV-982 isolate helper query

* DEV-982 add isKyc to bounties

* DEV-982 change isKyc to tierList

* DEV-982 add tierList to settings

* DEV-982 validate tier per bounty

* DEV-982 refresh step btn

* DEV-982 restore loading state

* DEV-982 changes request

* DEV-982 fix validate tiers

* DEV-982 fix check isKyc

* DEV-982 restore package-lock

* DEV-982 refresh token

* DEV-982 add isKyc to bounties

* DEV-982 add isKyc badge

* DEV-982 init kyc session

* DEV-982 validate kyc session

* DEV-982 change isKyc to tierList

* DEV-982 changes request

* DEV-982 fix conflicts

* DEV-982 fix conflicts

* DEV-982 remove debugger

* DEV-982 restore package-json

* DEV-982 restore check

* DEV-982 fix loading modal

* DEV-982 fix size modal

* doctors hands: Account for matching accounts before verifying a user

* linted

* clean dupes from rebase

* fix loggers

* make it so page.action on bounty redirects to profile and have the profile hold the kyc button

* dont return if no session

* make it so the timer actually makes sense and cleans when supposed to clean and creates only when needed

* make text green, adds a contextual span if success

* cha

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -271,8 +271,6 @@ li {
   }
 }
 
-
-
 // familys
 .family-Regular {
   font-family: "Space Grotesk", sans-serif;
@@ -574,14 +572,13 @@ label {
 
 
 input[type="date"]::-webkit-calendar-picker-indicator {
-  background-color: $white !important;
   border-radius: 5px;
+  content: url(../assets/CalendarBlank.svg);
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator:hover {
   transform:scale(1.2);
   cursor:pointer;
-  background-color: rgba($white, 0.2);
 }
 
 .input-group-border {
