--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -878,8 +878,12 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   font-weight: 500 !important;
 }
 
-.min-w-fit{
+.min-w-fit {
   min-width: fit-content !important;
+}
+
+.min-h-card {
+  min-height: 220px;
 }
 
 .ico-metamask {
