--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,6 +15,7 @@ $light-warning: #CCAB38;
 //Specials
 $dark-gray: #20222b;
 $gray: #c4c7d3;
+$gray-50: #F1F1F4;
 $gray-100: #E3E3E8;
 $gray-200: #C7C8D1;
 $gray-150: #D5D6DC;
@@ -26,6 +27,7 @@ $gray-800: #2E2F38;
 $gray-850: #23232A;
 $gray-900: #17171C;
 $gray-950: #0B0C0E;
+$blue-200: #B3B9F4;
 $light-gray: #434758;
 $blue: #4250e4;
 $blue-dark: #283089;
@@ -85,6 +87,7 @@ $more-bg: (
   "warning-30": rgba($warning, 0.3),
   "gray-70": rgba($gray, 0.7),
   "gray-100": $gray-100,
+  "gray-50": $gray-50,
   "gray-200": $gray-200,
   "gray-150": $gray-150,
   "gray-300": $gray-300,
@@ -95,6 +98,7 @@ $more-bg: (
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
+  "blue-200": $blue-200,
   "orange-500": $orange-500,
   "orange-800": rgba($orange-500, 0.8),
   "light-warning-30": rgba($light-warning, 0.3),
@@ -108,6 +112,7 @@ $more-colors: (
   "blue-shadow": $bg-blue-shadow,
   "purple": $purple,
   "gray": $gray,
+  "gray-50": $gray-50,
   "gray-100": $gray-100,
   "gray-200": $gray-200,
   "gray-150": $gray-150,
@@ -119,6 +124,7 @@ $more-colors: (
   "gray-850": $gray-850,
   "gray-900": $gray-900,
   "gray-950": $gray-950,
+  "blue-200": $blue-200,
   "dark-gray": $dark-gray,
   "light-gray": $light-gray,
   "black": $black,
