--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -606,7 +606,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   }
 
   .form-control:not(:only-child), > input:not(:only-child) {
-    border-right: none !important;
+    border: none !important;
   }
 
   &:hover {
@@ -614,14 +614,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   }
 
   &:focus-within {
-    .input-group-text {
-      border-left: none !important;
-
-      &:not(.border) {
-        border: 1px solid var(--bs-primary);
-        border-left: none;
-      }
-    }
+    border: 1px solid var(--bs-primary);
   }
 
   .input-group-text {
