--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -460,23 +460,27 @@ li {
 }
 
 .list-item {
-  background-color: $bg-shadow;
-  padding: $m * 2;
-  border-radius: math.div($m, 2);
   transition: 0.8 ease-in-out;
-  margin-bottom: $m;
   max-height: 220px;
+  margin-bottom: $m;
   &:last-child {
     margin-bottom: 0;
   }
-
   &:hover {
     background-color: lighten($bg-shadow, 5);
-    cursor: pointer;
     .h4 {
       color: $white;
     }
   }
+}
+
+.p-list-item {
+  padding: $m * 2;
+}
+
+.text-decoration-line {
+  text-decoration: line-through;
+  color: $gray-600;
 }
 
 .curator-list-item {
