Bepro 1637 new bounty header desktop (#35)
* adjusting price-conversor component

* creating bounty-settings component

* adjusting BountyHero component to new design

* adding handleEditIssue to BountyHero

* adding owner-cancel translation

* adding break-title and bounty-settings styles

* removing hardCancel and ownerCancel page-actions

* removing pullRequest and githubLink page-actions

* removing unused functions

* removing forks in page-actions

* removing unused imports

* adjusting bounty-hero to new components

* adjusting bounty-hero to bountyItemLabel

* adding translations

* removing count-info component

* adding bounty-outline-button class

* adding className option in GithubLink

* Update common.json

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1433,6 +1433,16 @@ textarea.form-control {
   }
 }
 
+.break-title {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.bounty-settings {
+  width: 180px;
+}
+
 .comment {
   a {
     color: var(--bs-primary);
